# ptasker

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  NEWS.html  README  README.html  README.md  aclocal.m4  config.h.in  config.status  configure  configure.ac  ptask.desktop  ptasker.desktop  style.css
debian/: .git-dpm  README.Debian  README.source  changelog  control  copyright  files  gbp.conf  gtask.substvars  ptask.doc-base  rules  watch
debian/patches/: 0001-Relax-taskwarrior-version-check.patch  series
debian/upstream/: signing-key.asc
icons/hicolor/scalable/: Makefile.am  Makefile.in
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  fr.gmo  fr.po  ptask.pot  ptasker.pot
src/: Makefile.am  Makefile.in  list.c  list.h  log.c  log.h  main.c  note.c  note.h  pio.c  pio.h  pstr.c  pstr.h  ptask.gschema.xml  ptasker.gschema.xml  ptime.c  ptime.h  settings.c  settings.h  tw.c  tw.h  ui.c  ui.h  ui_newtask_diag.c  ui_newtask_diag.h  ui_newtask_dialog.c  ui_newtask_dialog.h  ui_projecttree.c  ui_projecttree.h  ui_taskpanel.c  ui_taskpanel.h  ui_tasktree.c  ui_tasktree.h  ui_toolbar.c  ui_toolbar.h
src/glade/: Makefile.am  Makefile.in  gtask.glade  ptask.glade  ptasker.ui
tests/: Makefile.in
